--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 ipywidgets==7.7.2
 tqdm==4.64.1
 tsfresh==0.19.0
+numpy==1.23.3
+pandas==1.5.0
+plotly==5.10.0
+sklearn==0.0.post1
+scikit-learn==1.1.2
+setuptools==58.1.0
+scipy==1.8.1
+tables==3.7.0
